--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,11 +9,13 @@ body {
 }
 
 h1 {
-    color: white;
+    color: rgb(230, 242, 122);
     text-align: center;
-    font-size: 3em;
-    font-weight: bold;
+    font-size: 4em;
+    font-weight: 700;
+    font-family: 'Patrick Hand', Georgia, serif;
     margin-bottom: 10px;
+    letter-spacing: 0.05em;
 }
 
 /* Top ad container */
