--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,11 +9,11 @@ body {
 }
 
 h1 {
-    color: rgb(230, 242, 122);
+    color: rgb(218, 197, 145);
     text-align: center;
     font-size: 4em;
     font-weight: 700;
-    font-family: 'Patrick Hand', Georgia, serif;
+    font-family: 'Amarante', Georgia, serif;
     margin-bottom: 10px;
     letter-spacing: 0.05em;
 }
