--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,6 +36,23 @@ h1 {
     display: block;
 }
 
+/* Progress bar */
+#ad-progress-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+#ad-progress-fill {
+    height: 100%;
+    width: 0%;
+    background-color: rgba(218, 197, 145, 0.8);
+    transition: width linear;
+}
+
 /* Main two-column layout - preserve from original */
 .main-container {
     display: flex;
@@ -68,7 +85,7 @@ h1 {
 .date-header {
     font-size: 1.65em;
     font-weight: bold;
-    color: white;
+    color: rgb(218, 197, 145);
     margin-bottom: 6px;
     padding-bottom: 3px;
     border-bottom: 1px solid #444;
@@ -124,6 +141,8 @@ h1 {
     margin-left: 10px;
     margin-bottom: 10px;
     display: block;
+    border: 3px solid rgb(218, 197, 145);
+    box-sizing: border-box;
 }
 
 .static-ad:first-child {
